--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -9,10 +9,18 @@
                </div>
             </div>
             <div class="col-md-8">
-               <div class="about-coments">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, obcaecati quas. Tempore optio ab deserunt laboriosam. Enim accusantium nostrum nulla perferendis odit quibusdam quisquam neque natus rerum, quae placeat molest Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad distinctio ipsa odio tempore nesciunt eum temporibus quaerat accusantium, id at.</p>
+               <div class="about-coments pt-5">
+                  <p class="mt-3">My name is <b class="text-white">Alian Medina.</b>  Software Ingenier graduated in 2014 at the Technological University of Havana, Cuba (ISPJAE). <br>
+                  I'm a creative and enthusiastic team worker, who loves to solve professional and personal challenges, learning as much as I can in the proccess. <br> 
+                  On my free time, I love to play the guitar, read a good mistery novel, watch and play futball with my friends and spend good quality time with my Family.<br>
+                  <br>
+                  <b>Do you want to know more about me? Just Click below...</b> 
+                  </p>
                </div>
-               <a class="btn btn-primary" target="_blank" href="../../../assets/CV Manuel Alejandro Medina Cabrera.pdf">Download my C.V</a>
+               <div class="buton-cv mt-3">
+                  <a class="btn btn-primary block" target="_blank" href="../../../assets/Alian-Medina-CV .pdf">Download my C.V</a>
+               </div>
+               
             </div>
             
          </div>
