--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -25,7 +25,15 @@
                         <h3>On social Networks</h3>
                     </div>
                     <div class="social">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nisi a eum deserunt, sunt laborum voluptates accusamus ea eius? Aliquam!</p>
+                        <div class="row">
+                            <div class="col-md-4"><a href="https://www.facebook.com/alian.medinascabrera" target="blank"><img src="../../../assets/facebook.png" alt="facebook" srcset=""></a></div>
+                            <div class="col-md-4"><a href="https://twitter.com/AmcAlian" target="blank"><img src="../../../assets/twitter.png" alt="twitter" srcset=""></a></div>
+                            <div class="col-md-4"><a href="https://www.instagram.com/medinascabrera/" target="blank"><img src="../../../assets/instagram.png" alt="instagram" srcset=""></a></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6"><a href="https://github.com/alianmc1988" target="blank"><img src="../../../assets/github.png" alt="gitHub" srcset=""></a></div>
+                            <div class="col-md-6"><a href="https://www.linkedin.com/in/alian-medina-7a14101a9/" target="blank"><img src="../../../assets/linkedin.png" alt="linkedin" srcset=""></a></div>
+                        </div>
                     </div>
                     
                 </div>
