--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -27,10 +27,19 @@ img{
     margin-top: 30px;
 }
 
+.about-coments p{
+    font-size: 1.2em;
+    text-shadow: 2px 2px rgb(73, 73, 73);
+    color: whitesmoke;
+}
+
+
 @media (min-width:1024px){
     
     .about-coments{
         margin: auto;
     }
+    
+    
 }
 
