--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,19 +22,19 @@
       </div>
       <ul class="navbar-nav socialNetworks-list">
         <li class="nav-item active">
-          <a class="nav-link active" aria-current="page" href="#">Facebook</a>
+          <a class="nav-link active" aria-current="page" href="https://www.facebook.com/alian.medinascabrera" target="blank">Facebook</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Instagram</a>
+          <a class="nav-link" aria-current="page" href="https://www.instagram.com/medinascabrera/" target="blank">Instagram</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Tweeter</a>
+          <a class="nav-link" aria-current="page" href="https://twitter.com/AmcAlian" target="blank">Tweeter</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#" >Linkedin</a>
+          <a class="nav-link" aria-current="page" href="https://www.linkedin.com/in/alian-medina-7a14101a9/" target="blank">Linkedin</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#" >GitHub</a>
+          <a class="nav-link" aria-current="page" href="https://github.com/alianmc1988" target="blank" >GitHub</a>
         </li>
       </ul>
   </div>
