--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,30 +1,65 @@
-<section  class="about-section container" id="about">
-   <div [@show]="!muestra? 'void':'enter'">
-      <div class="title container"><h2 class="mt-5 mb-4"><b>About</b> </h2></div>
-      <div class="about-wrapper card">
-         <div class="row">
-            <div class="col-md-4">
-               <div class="myPic">
-                  <img src="../../../assets/alian2.png" alt="alianpicture" srcset="">
-               </div>
+<section *ngIf="languaje == 'en'" class="about-section container" id="about">
+    <div [@show]="!muestra? 'void':'enter'">
+        <div class="title container">
+            <h2 class="mt-5 mb-4"><b>About</b> </h2>
+        </div>
+        <div class="about-wrapper card">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="myPic">
+                        <img src="../../../assets/alian2.png" alt="alianpicture" srcset="">
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="about-coments pt-5">
+                        <p class="mt-3">My name is <b class="text-white">Alian Medina.</b> Software Ingenier graduated in 2014 at the Technological University of Havana, Cuba (ISPJAE). <br> I'm a creative and enthusiastic team worker, who loves to solve professional
+                            and personal challenges, learning as much as I can in the proccess. <br> On my free time, I love to play the guitar, read a good mistery novel, watch and play football with my friends and spend good quality time with my Family.<br>
+                            <br>
+                            <b>Do you want to know more about me? Just Click below...</b>
+                        </p>
+                    </div>
+                    <div class="buton-cv mt-3">
+                        <a class="btn btn-primary block" target="_blank" href="../../../assets/CV/CV Alian EN.pdf">Download my C.V</a>
+                    </div>
+
+                </div>
+
             </div>
-            <div class="col-md-8">
-               <div class="about-coments pt-5">
-                  <p class="mt-3">My name is <b class="text-white">Alian Medina.</b>  Software Ingenier graduated in 2014 at the Technological University of Havana, Cuba (ISPJAE). <br>
-                  I'm a creative and enthusiastic team worker, who loves to solve professional and personal challenges, learning as much as I can in the proccess. <br> 
-                  On my free time, I love to play the guitar, read a good mistery novel, watch and play futball with my friends and spend good quality time with my Family.<br>
-                  <br>
-                  <b>Do you want to know more about me? Just Click below...</b> 
-                  </p>
-               </div>
-               <div class="buton-cv mt-3">
-                  <a class="btn btn-primary block" target="_blank" href="../../../assets/Alian-Medina-CV .pdf">Download my C.V</a>
-               </div>
-               
+        </div>
+
+    </div>
+</section>
+
+<!-- About section Spanish -->
+
+<section *ngIf="languaje == 'es'" class="about-section container" id="about">
+    <div [@show]="!muestra? 'void':'enter'">
+        <div class="title container">
+            <h2 class="mt-5 mb-4"><b>Sobre Mi</b> </h2>
+        </div>
+        <div class="about-wrapper card">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="myPic">
+                        <img src="../../../assets/alian2.png" alt="alianpicture" srcset="">
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="about-coments pt-5">
+                        <p class="mt-3">Mi nombre es <b class="text-white">Alian Medina.</b> Ingeniero Informatico graduado en 2014 en la Universidad Tecnologica de la Habana, Cuba (ISPJAE). <br> Creativo, entusiasta y excelente trabajador en equipo, que le apasionan
+                            los retos personales y profesionales aprendiendo todo lo posible de cada uno de ellos.<br> En mi tiempo libre, me gusta cantar y tocar la guitarra, leer, ver y jugar al futbol con mis amistades y pasar tiempo con mi familia.<br>
+                            <br>
+                            <b>¿Desea conocer más sobre mí? Haga click debajo...</b>
+                        </p>
+                    </div>
+                    <div class="buton-cv mt-3">
+                        <a class="btn btn-primary block" target="_blank" href="../../../assets/CV/CV Alian ES .pdf">Descarga mi C.V</a>
+                    </div>
+
+                </div>
+
             </div>
-            
-         </div>
-      </div>
-      
-   </div>
+        </div>
+
+    </div>
 </section>
