--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,46 +1,102 @@
-<section  class="container" id="contact">
-   
+<section *ngIf="languaje == 'en'" class="container" id="contact">
+
     <div [@show]="!muestra? 'void':'enter'" class="contact-wrapper container">
-        <div class="title container"></div><h2><b>Contact</b> </h2>
+        <div class="title container"></div>
+        <h2><b>Contact</b> </h2>
         <div class="form-wrapper row">
             <div class="col-md-7 contactme">
-                <div><h3>Email me</h3></div>
-                <form (ngSubmit)='sendData(mailForm.value)' [formGroup]='mailForm' class="d-none">
-                    <div class="contact-wrapper card">
-                        
-                                                 
-                         <input formControlName='from' type="text" class="from" id="from" placeholder="From: John Doe">
-                         <input formControlName='mail' type="email" class="email" id="email" placeholder="email: example@example.com">
-                         <textarea formControlName='msjContent' name="content" id="content" cols="30" rows="10" placeholder="Message Content"></textarea>
-                         <button [disabled]='mailForm.invalid' type="submit" class="btn btn-primary">Send</button>
-                    </div>
-                 </form>
-                 <a href="mailto:alianmc1988@gmail.com" target="_blank" id="mail-me">alianmc1988@gmail.com</a>
+                <div>
+                    <h3>Email me</h3>
+                </div>
+                <!--  -->
+                <a href="mailto:alianmc1988@gmail.com" target="_blank" id="mail-me">alianmc1988@gmail.com</a>
             </div>
-             
+
             <div class="col-md-5 contactme">
-                
+
                 <div class="social-wrapper">
                     <div>
                         <h3>On social Networks</h3>
                     </div>
                     <div class="social">
                         <div class="row">
-                            <div class="col-md-4"><a href="https://www.facebook.com/alian.medinascabrera" target="blank"><img src="../../../assets/facebook.png" alt="facebook" srcset=""></a></div>
-                            <div class="col-md-4"><a href="https://twitter.com/AmcAlian" target="blank"><img src="../../../assets/twitter.png" alt="twitter" srcset=""></a></div>
-                            <div class="col-md-4"><a href="https://www.instagram.com/medinascabrera/" target="blank"><img src="../../../assets/instagram.png" alt="instagram" srcset=""></a></div>
+                            <div class="col-md-4">
+                                <a href="https://www.facebook.com/alian.medinascabrera" target="blank"><img src="../../../assets/facebook.png" alt="facebook" srcset=""></a>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="https://twitter.com/AmcAlian" target="blank"><img src="../../../assets/twitter.png" alt="twitter" srcset=""></a>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="https://www.instagram.com/medinascabrera/" target="blank"><img src="../../../assets/instagram.png" alt="instagram" srcset=""></a>
+                            </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6"><a href="https://github.com/alianmc1988" target="blank"><img src="../../../assets/github.png" alt="gitHub" srcset=""></a></div>
-                            <div class="col-md-6"><a href="https://www.linkedin.com/in/alian-medina-7a14101a9/" target="blank"><img src="../../../assets/linkedin.png" alt="linkedin" srcset=""></a></div>
+                            <div class="col-md-6">
+                                <a href="https://github.com/alianmc1988" target="blank"><img src="../../../assets/github.png" alt="gitHub" srcset=""></a>
+                            </div>
+                            <div class="col-md-6">
+                                <a href="https://www.linkedin.com/in/alian-medina-7a14101a9/" target="blank"><img src="../../../assets/linkedin.png" alt="linkedin" srcset=""></a>
+                            </div>
                         </div>
                     </div>
-                    
+
                 </div>
-                
-             </div>
-            
+
+            </div>
+
         </div>
     </div>
 </section>
 
+<!-- seccion contact español -->
+<section *ngIf="languaje=='es'" class="container" id="contact">
+
+    <div [@show]="!muestra? 'void':'enter'" class="contact-wrapper container">
+        <div class="title container"></div>
+        <h2><b>Contacteme</b> </h2>
+        <div class="form-wrapper row">
+            <div class="col-md-7 contactme">
+                <div>
+                    <h3>Envieme un mail</h3>
+                </div>
+                <!--  -->
+                <a href="mailto:alianmc1988@gmail.com" target="_blank" id="mail-me">alianmc1988@gmail.com</a>
+            </div>
+
+            <div class="col-md-5 contactme">
+
+                <div class="social-wrapper">
+                    <div>
+                        <h3>En Redes Sociales</h3>
+                    </div>
+                    <div class="social">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a href="https://www.linkedin.com/in/alian-medina-7a14101a9/" target="blank"><img src="../../../assets/linkedin.png" alt="linkedin" srcset=""></a>
+                            </div>
+                            <div class="col-md-6">
+                                <a href="https://github.com/alianmc1988" target="blank"><img src="../../../assets/github.png" alt="gitHub" srcset=""></a>
+                            </div>
+
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <a href="https://www.facebook.com/alian.medinascabrera" target="blank"><img src="../../../assets/facebook.png" alt="facebook" srcset=""></a>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="https://twitter.com/AmcAlian" target="blank"><img src="../../../assets/twitter.png" alt="twitter" srcset=""></a>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="https://www.instagram.com/medinascabrera/" target="blank"><img src="../../../assets/instagram.png" alt="instagram" srcset=""></a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</section>
