--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,74 +1,149 @@
-<div class="strip-nav-exterior d-md-none">
-  <div class="list-wrapper ">
-    <div class="menu">
-      <h5>Menu</h5>
-    </div>
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link active" aria-current="page" href="#home">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="#portfolio">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="#about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="#contact" >Contact</a>
-      </li>
-    </ul>
-      <div class="menu  mt-4">
-        <h5>Social Networks</h5>
-      </div>
-      <ul class="navbar-nav socialNetworks-list">
-        <li class="nav-item active">
-          <a class="nav-link active" aria-current="page" href="https://www.facebook.com/alian.medinascabrera" target="blank">Facebook</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="https://www.instagram.com/medinascabrera/" target="blank">Instagram</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="https://twitter.com/AmcAlian" target="blank">Tweeter</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="https://www.linkedin.com/in/alian-medina-7a14101a9/" target="blank">Linkedin</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="https://github.com/alianmc1988" target="blank" >GitHub</a>
-        </li>
-      </ul>
-  </div>
-  
-</div>
-
-<nav class="navbar d-md-flex navbar-expand-md navbar-dark bg-dark banner">
-    <div class="container long">
-      <div class="navbar-toggler-icon d-md-none" ></div>
-    
-      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button> -->
-      
-      <img class="d-md-none" src="../../../assets/favico.png" alt="Alian's Brand" srcset="">
-      <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+<div *ngIf="languaje == 'en'" class="strip-nav-exterior d-md-none">
+    <div class="list-wrapper ">
+        <div class="menu">
+            <h5>Menu</h5>
+        </div>
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#contact" >Contact</a>
-          </li>
-          
+            <li class="nav-item active">
+                <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#contact">Contact</a>
+            </li>
         </ul>
-      </div>
+        <div class="menu  mt-4">
+            <h5>Social Networks</h5>
+        </div>
+        <ul class="navbar-nav socialNetworks-list">
+            <li class="nav-item active">
+                <a class="nav-link active" aria-current="page" href="https://www.facebook.com/alian.medinascabrera" target="blank">Facebook</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://www.instagram.com/medinascabrera/" target="blank">Instagram</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://twitter.com/AmcAlian" target="blank">Tweeter</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://www.linkedin.com/in/alian-medina-7a14101a9/" target="blank">Linkedin</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://github.com/alianmc1988" target="blank">GitHub</a>
+            </li>
+        </ul>
     </div>
-    
-    
-  </nav>
-  
+
+</div>
+<!-- Barra de nav cell spanish -->
+<div *ngIf="languaje == 'es'" class="strip-nav-exterior d-md-none">
+    <div class="list-wrapper ">
+        <div class="menu">
+            <h5>Menu</h5>
+        </div>
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link active" aria-current="page" href="#home">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#about">Sobre Mi</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#contact">Contacteme</a>
+            </li>
+        </ul>
+        <div class="menu  mt-4">
+            <h5>Redes Sociales</h5>
+        </div>
+        <ul class="navbar-nav socialNetworks-list">
+            <li class="nav-item active">
+                <a class="nav-link active" aria-current="page" href="https://www.facebook.com/alian.medinascabrera" target="blank">Facebook</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://www.instagram.com/medinascabrera/" target="blank">Instagram</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://twitter.com/AmcAlian" target="blank">Tweeter</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://www.linkedin.com/in/alian-medina-7a14101a9/" target="blank">Linkedin</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://github.com/alianmc1988" target="blank">GitHub</a>
+            </li>
+        </ul>
+    </div>
+
+</div>
+<!-- Fin barra nav cell spanish -->
+
+<!-- barra nav PC English -->
+<nav *ngIf="languaje == 'en'" class="navbar d-md-flex navbar-expand-md navbar-dark bg-dark banner">
+    <div class="container long">
+        <div class="navbar-toggler-icon d-md-none"></div>
+
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+
+        <img class="d-md-none" src="../../../assets/favico.png" alt="Alian's Brand" srcset="">
+        <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#portfolio">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#contact">Contact</a>
+                </li>
+
+            </ul>
+        </div>
+        <app-switch></app-switch>
+    </div>
+
+
+</nav>
+<!-- Fin barra nav PC English -->
+
+<!-- Barra nav PC Spanish -->
+<nav *ngIf="languaje == 'es'" class="navbar d-md-flex navbar-expand-md navbar-dark bg-dark banner">
+    <div class="container long">
+        <div class="navbar-toggler-icon d-md-none"></div>
+
+        <img class="d-md-none" src="../../../assets/favico.png" alt="Alian's Brand" srcset="">
+        <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link active" aria-current="page" href="#home">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#portfolio">Portafolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#about">Sobre Mi</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#contact">Contacteme</a>
+                </li>
+
+            </ul>
+        </div>
+        <app-switch></app-switch>
+    </div>
+
+
+</nav>
