--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -49,7 +49,7 @@
                 <div class="card mb-3">
                     <div class="demos container mt-4">
                         <div class="picture-wrapper">
-                            <a href="https://alianmc1988.github.io/MiFactura/" target="_blank"> <img class="btn btn-apps" src={{proyect.picture}} alt="demo_pic" srcset=""></a>
+                            <a href={{proyect.linkname}} target="_blank"> <img class="btn btn-apps" src={{proyect.picture}} alt="demo_pic" srcset=""></a>
                         </div>
 
 
